--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"prepare": "husky",
 		"lint:fix": "next lint --fix",
 		"format": "prettier --write .",
-		"format:check": "prettier --check ."
+		"format:check": "prettier --check .",
+		"pre-commit": "lint-staged"
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.69.0",
@@ -57,5 +58,5 @@
 			"eslint --fix",
 			"prettier --write"
 		]
-	}
+  }
 }
