--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,7 @@
 		"source.fixAll.eslint": "explicit",
 		"source.organizeImports": "explicit"
 	},
-	"eslint.validate": [
-		"javascript",
-		"javascriptreact",
-		"typescript",
-		"typescriptreact"
-	],
+	"eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
 	"eslint.rules.customizations": [
 		{
 			"rule": "@typescript-eslint/no-unused-vars",
