--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
+		"lint:prod": "cross-env NODE_ENV=production next lint",
+		"lint:fix": "cross-env NODE_ENV=production next lint --fix",
 		"test": "vitest",
 		"test:ui": "vitest --ui",
 		"test:coverage": "vitest run --coverate",
 		"prepare": "husky",
-		"lint:fix": "next lint --fix",
-		"format": "prettier --write .",
+		"format": "cross-env NODE_ENV=production prettier --write .",
 		"format:check": "prettier --check .",
 		"pre-commit": "lint-staged"
 	},
@@ -41,6 +42,7 @@
 		"@types/react-dom": "^19",
 		"@vitejs/plugin-react": "^4.3.4",
 		"@vitest/ui": "^3.0.9",
+		"cross-env": "^7.0.3",
 		"eslint": "^9",
 		"eslint-config-next": "15.2.4",
 		"husky": "^9.1.7",
@@ -55,8 +57,8 @@
 	},
 	"lint-staged": {
 		"**/*.{js,jsx,ts,tsx}": [
-			"eslint --fix",
+			"pnpm lint:fix",
 			"prettier --write"
 		]
-  }
+	}
 }
