--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
 		"format:check": "prettier --check .",
 		"prepare": "husky"
 	},
+	"lint-staged": {
+		"**/*.{js,jsx,ts,tsx}": [
+			"next lint --fix",
+			"prettier --write ."
+		]
+	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.69.0",
 		"@tanstack/react-query-devtools": "^5.69.0",
@@ -45,6 +51,7 @@
 		"eslint-config-next": "15.2.4",
 		"husky": "^9.1.7",
 		"jsdom": "^26.0.0",
+		"lint-staged": "^15.5.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"tailwindcss": "^4",
