--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"test": "vitest",
 		"test:ui": "vitest --ui",
 		"test:coverage": "vitest run --coverage",
-		"format": "prettier --write .",
+		"format": "prettier --write \"./**/*.{ts,tsx,json,scss,css,js,jsx}\"",
 		"format:check": "prettier --check .",
 		"prepare": "husky"
 	},
