--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"lint-staged": "^15.5.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"shelljs": "^0.9.2",
 		"tailwindcss": "^4",
 		"typescript": "^5",
 		"typescript-eslint": "^8.28.0",
