--- a/package.json
+++ b/package.json
@@ -30,15 +30,12 @@
 		"next": "15.2.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-error-boundary": "^6.0.0",
-		"tailwind-merge": "^3.0.2",
-		"tw-animate-css": "^1.2.4"
+		"react-error-boundary": "^6.0.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.0",
 		"@commitlint/config-conventional": "^19.8.0",
 		"@eslint/eslintrc": "^3",
-		"@tailwindcss/postcss": "^4",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
 		"@testing-library/user-event": "^14.6.1",
@@ -47,18 +44,21 @@
 		"@types/react-dom": "^19",
 		"@vitejs/plugin-react": "^4.3.4",
 		"@vitest/ui": "^3.0.9",
+		"autoprefixer": "^10.4.21",
 		"cross-env": "^7.0.3",
 		"eslint": "^9",
 		"eslint-config-next": "15.2.4",
 		"husky": "^9.1.7",
 		"jsdom": "^26.0.0",
 		"lint-staged": "^15.5.0",
+		"postcss-custom-media": "^11.0.6",
+		"postcss-nested": "^7.0.2",
 		"prettier": "^3.5.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
+		"sass": "^1.92.1",
 		"shelljs": "^0.9.2",
-		"tailwindcss": "^4",
 		"typescript": "^5",
 		"typescript-eslint": "^8.28.0",
+		"typescript-plugin-css-modules": "^5.2.0",
 		"vitest": "^3.0.9"
 	}
 }
