--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,13 @@
 		"plugins": [
 			{
 				"name": "next"
+			},
+			{
+				"name": "typescript-plugin-css-modules",
+				"options": {
+					"classnameTransform": "camelCase",
+					"customMatcher": "\\.module\\.(c|le|sc|sa)ss$"
+				}
 			}
 		],
 		"paths": {
