--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"test:coverage": "vitest run --coverage",
 		"format": "prettier --write \"./**/*.{ts,tsx,json,scss,css,js,jsx}\"",
 		"format:check": "prettier --check .",
-		"prepare": "husky"
+		"prepare": "husky",
+		"generate": "tsx scripts/generate-component/index.ts"
 	},
 	"lint-staged": {
 		"**/*.{js,jsx,ts,tsx}": [
@@ -22,43 +23,47 @@
 		]
 	},
 	"dependencies": {
-		"@tanstack/react-query": "^5.69.0",
-		"@tanstack/react-query-devtools": "^5.69.0",
+		"@tanstack/react-query": "^5.90.1",
+		"@tanstack/react-query-devtools": "^5.90.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.484.0",
 		"next": "15.2.4",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
+		"react": "^19.1.1",
+		"react-dom": "^19.1.1",
 		"react-error-boundary": "^6.0.0"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^19.8.0",
-		"@commitlint/config-conventional": "^19.8.0",
-		"@eslint/eslintrc": "^3",
-		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/react": "^16.2.0",
+		"@commitlint/cli": "^19.8.1",
+		"@commitlint/config-conventional": "^19.8.1",
+		"@eslint/eslintrc": "^3.3.1",
+		"@testing-library/jest-dom": "^6.8.0",
+		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^14.6.1",
-		"@types/node": "^20",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"@vitejs/plugin-react": "^4.3.4",
-		"@vitest/ui": "^3.0.9",
+		"@types/node": "^20.19.17",
+		"@types/react": "^19.1.13",
+		"@types/react-dom": "^19.1.9",
+		"@vitejs/plugin-react": "^4.7.0",
+		"@vitest/ui": "^3.2.4",
 		"autoprefixer": "^10.4.21",
+		"chalk": "^5.6.2",
+		"colors": "^1.4.0",
+		"commander": "^14.0.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^9",
+		"eslint": "^9.36.0",
 		"eslint-config-next": "15.2.4",
 		"husky": "^9.1.7",
-		"jsdom": "^26.0.0",
-		"lint-staged": "^15.5.0",
+		"jsdom": "^26.1.0",
+		"lint-staged": "^15.5.2",
 		"postcss-custom-media": "^11.0.6",
 		"postcss-nested": "^7.0.2",
-		"prettier": "^3.5.3",
-		"sass": "^1.92.1",
+		"prettier": "^3.6.2",
+		"sass": "^1.93.0",
 		"shelljs": "^0.9.2",
-		"typescript": "^5",
-		"typescript-eslint": "^8.28.0",
+		"tsx": "^4.20.5",
+		"typescript": "^5.9.2",
+		"typescript-eslint": "^8.44.0",
 		"typescript-plugin-css-modules": "^5.2.0",
-		"vitest": "^3.0.9"
+		"vitest": "^3.2.4"
 	}
 }
