--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "eslint.config.mjs"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules", "scripts/templates/**/*.template"]
 }
