--- a/package.json
+++ b/package.json
@@ -6,21 +6,15 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint",
-		"lint:fix": "next lint --fix",
 		"test": "vitest",
 		"test:ui": "vitest --ui",
 		"test:coverage": "vitest run --coverage",
-		"format": "prettier --write \"./**/*.{ts,tsx,json,scss,css,js,jsx}\"",
-		"format:check": "prettier --check .",
 		"prepare": "husky",
-		"generate": "tsx scripts/generate-component/index.ts"
-	},
-	"lint-staged": {
-		"**/*.{js,jsx,ts,tsx}": [
-			"eslint --fix",
-			"prettier --write"
-		]
+		"generate": "tsx scripts/generate-component/index.ts",
+		"format": "biome format",
+		"format:write": "biome format --write",
+		"check": "biome check",
+		"check:write": "biome check --write"
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.90.1",
@@ -34,6 +28,7 @@
 		"react-error-boundary": "^6.0.0"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "2.2.6",
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
 		"@eslint/eslintrc": "^3.3.1",
@@ -65,5 +60,8 @@
 		"typescript-eslint": "^8.44.0",
 		"typescript-plugin-css-modules": "^5.2.0",
 		"vitest": "^3.2.4"
+	},
+	"volta": {
+		"node": "22.20.0"
 	}
 }
