--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"colors": "^1.4.0",
 		"commander": "^14.0.1",
 		"cross-env": "^7.0.3",
+		"husky": "^9.1.7",
 		"jsdom": "^26.1.0",
 		"postcss-custom-media": "^11.0.6",
 		"postcss-nested": "^7.0.2",
