--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"format": "biome format",
 		"format:write": "biome format --write",
 		"check": "biome check",
-		"check:write": "biome check --write"
+		"check:write": "biome check --write",
+		"check:staged": "biome check --staged",
+		"check:changed": "biome check --changed --since=next"
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.90.1",
@@ -31,7 +33,6 @@
 		"@biomejs/biome": "2.2.6",
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
-		"@eslint/eslintrc": "^3.3.1",
 		"@testing-library/jest-dom": "^6.8.0",
 		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^14.6.1",
@@ -45,17 +46,13 @@
 		"colors": "^1.4.0",
 		"commander": "^14.0.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^9.36.0",
-		"eslint-config-next": "15.2.4",
 		"husky": "^9.1.7",
 		"jsdom": "^26.1.0",
-		"lint-staged": "^15.5.2",
 		"postcss-custom-media": "^11.0.6",
 		"sass": "^1.93.0",
 		"shelljs": "^0.9.2",
 		"tsx": "^4.20.5",
 		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.44.0",
 		"typescript-plugin-css-modules": "^5.2.0",
 		"vitest": "^3.2.4"
 	},
