--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"format:write": "biome format --write",
 		"check": "biome check",
 		"check:write": "biome check --write",
-		"check:staged": "biome check --staged",
+		"check:staged": "biome check --staged --no-errors-on-unmatched",
 		"check:changed": "biome check --changed --since=next"
 	},
 	"dependencies": {
