feat(ACCESSIBILITY): added announcers
- useAnnouncer hook
- Loading announcer component
- Search announcer component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,5 +35,6 @@
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"css.validate": true,
 	"scss.validate": true,
-	"css.lint.unknownAtRules": "ignore"
+	"css.lint.unknownAtRules": "ignore",
+	"files.eol": "\n"
 }
