feat: added storybook

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"test": "vitest",
 		"test:ui": "vitest --ui",
 		"test:coverage": "vitest run --coverage",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
 		"prepare": "husky",
 		"generate": "tsx scripts/generate-component/index.ts",
 		"format": "biome format",
@@ -31,8 +33,16 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.6",
+		"@chromatic-com/storybook": "^1.9.0",
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
+		"@storybook/addon-a11y": "^8.4.7",
+		"@storybook/addon-essentials": "^8.4.7",
+		"@storybook/addon-interactions": "^8.4.7",
+		"@storybook/addon-links": "^8.4.7",
+		"@storybook/nextjs": "^8.4.7",
+		"@storybook/react": "^8.4.7",
+		"@storybook/test": "^8.4.7",
 		"@testing-library/jest-dom": "^6.8.0",
 		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^14.6.1",
@@ -51,6 +61,7 @@
 		"postcss-custom-media": "^11.0.6",
 		"sass": "^1.93.0",
 		"shelljs": "^0.9.2",
+		"storybook": "^8.4.7",
 		"tsx": "^4.20.5",
 		"typescript": "^5.9.2",
 		"typescript-plugin-css-modules": "^5.2.0",
