fix: client component generation

--- a/scripts/generate-component/templates/client-component.template
+++ b/scripts/generate-component/templates/client-component.template
@@ -1,6 +1,7 @@
 'use client';
 
 import { useState } from 'react';
+import styles from './{{COMPONENT_NAME}}.module.css';
 
 {{PROPS_TYPE_DEFINITION}}
 
