fix: main github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
             - name: Install dependencies
               run: pnpm install
             - name: Lint files
-              run: pnpm check
+              run: pnpm biome ci .
