--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
 		"check:changed": "biome check --changed --since=next"
 	},
 	"dependencies": {
-		"@tanstack/react-query": "^5.90.1",
-		"@tanstack/react-query-devtools": "^5.90.1",
+		"@tanstack/react-query": "^5.90.10",
+		"@tanstack/react-query-devtools": "^5.90.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.484.0",
 		"next": "15.2.4",
-		"react": "^19.1.1",
-		"react-dom": "^19.1.1",
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
 		"react-error-boundary": "^6.0.0"
 	},
 	"devDependencies": {
@@ -36,34 +36,36 @@
 		"@chromatic-com/storybook": "^1.9.0",
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
-		"@storybook/addon-a11y": "^8.4.7",
-		"@storybook/addon-essentials": "^8.4.7",
-		"@storybook/addon-interactions": "^8.4.7",
-		"@storybook/addon-links": "^8.4.7",
-		"@storybook/nextjs": "^8.4.7",
-		"@storybook/react": "^8.4.7",
-		"@storybook/test": "^8.4.7",
-		"@testing-library/jest-dom": "^6.8.0",
+		"@storybook/addon-a11y": "^8.6.14",
+		"@storybook/addon-essentials": "^8.6.14",
+		"@storybook/addon-interactions": "^8.6.14",
+		"@storybook/addon-links": "^8.6.14",
+		"@storybook/manager-api": "^8.6.14",
+		"@storybook/nextjs": "^8.6.14",
+		"@storybook/react": "^8.6.14",
+		"@storybook/test": "^8.6.14",
+		"@storybook/theming": "^8.6.14",
+		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^14.6.1",
-		"@types/node": "^20.19.17",
-		"@types/react": "^19.1.13",
-		"@types/react-dom": "^19.1.9",
+		"@types/node": "^20.19.25",
+		"@types/react": "^19.2.5",
+		"@types/react-dom": "^19.2.3",
 		"@vitejs/plugin-react": "^4.7.0",
 		"@vitest/ui": "^3.2.4",
-		"autoprefixer": "^10.4.21",
+		"autoprefixer": "^10.4.22",
 		"chalk": "^5.6.2",
 		"colors": "^1.4.0",
-		"commander": "^14.0.1",
+		"commander": "^14.0.2",
 		"cross-env": "^7.0.3",
 		"husky": "^9.1.7",
 		"jsdom": "^26.1.0",
 		"postcss-custom-media": "^11.0.6",
-		"sass": "^1.93.0",
+		"sass": "^1.94.0",
 		"shelljs": "^0.9.2",
-		"storybook": "^8.4.7",
-		"tsx": "^4.20.5",
-		"typescript": "^5.9.2",
+		"storybook": "^8.6.14",
+		"tsx": "^4.20.6",
+		"typescript": "^5.9.3",
 		"typescript-plugin-css-modules": "^5.2.0",
 		"vitest": "^3.2.4"
 	},
