feat: enhance UI components and styles
- Added Loader component to the Home page for improved loading indication.
- Updated input styles to enhance accessibility and visual feedback.
- Refactored global CSS variables for a pastel color palette and improved theming support.
- Improved typography styles for better readability and consistency across headings and paragraphs.
- Enhanced button and form element focus states for better accessibility.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
 	"editor.defaultFormatter": "biomejs.biome",
 	"editor.codeActionsOnSave": {
 		"source.fixAll.biome": "explicit",
-		"source.organizeImports.biome": "explicit"
+		"source.organizeImports.biome": "explicit",
+		"source.useSortedProperties.biome": "explicit"
 	},
 	"[javascript]": {
 		"editor.defaultFormatter": "biomejs.biome"
