--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"check:changed": "biome check --changed --since=next"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
 		"@tanstack/react-query": "^5.90.10",
 		"@tanstack/react-query-devtools": "^5.90.2",
 		"class-variance-authority": "^0.7.1",
@@ -29,22 +30,24 @@
 		"next": "15.2.4",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
-		"react-error-boundary": "^6.0.0"
+		"react-error-boundary": "^6.0.0",
+		"react-hook-form": "^7.66.1",
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.6",
 		"@chromatic-com/storybook": "^1.9.0",
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
-		"@storybook/addon-a11y": "^8.6.14",
-		"@storybook/addon-essentials": "^8.6.14",
-		"@storybook/addon-interactions": "^8.6.14",
-		"@storybook/addon-links": "^8.6.14",
-		"@storybook/manager-api": "^8.6.14",
-		"@storybook/nextjs": "^8.6.14",
-		"@storybook/react": "^8.6.14",
-		"@storybook/test": "^8.6.14",
-		"@storybook/theming": "^8.6.14",
+		"@storybook/addon-a11y": "8.4.7",
+		"@storybook/addon-essentials": "8.4.7",
+		"@storybook/addon-interactions": "8.4.7",
+		"@storybook/addon-links": "8.4.7",
+		"@storybook/manager-api": "8.4.7",
+		"@storybook/nextjs": "8.4.7",
+		"@storybook/react": "8.4.7",
+		"@storybook/test": "8.4.7",
+		"@storybook/theming": "8.4.7",
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^14.6.1",
@@ -63,7 +66,7 @@
 		"postcss-custom-media": "^11.0.6",
 		"sass": "^1.94.0",
 		"shelljs": "^0.9.2",
-		"storybook": "^8.6.14",
+		"storybook": "8.4.7",
 		"tsx": "^4.20.6",
 		"typescript": "^5.9.3",
 		"typescript-plugin-css-modules": "^5.2.0",
